--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/Joy.png" alt="Joy profile picture"></td>
+      <td><img src="Images/joy.png" alt="Joy profile picture"></td>
       <td>
         <h1>Joy Aroh</h1>
         <p><em>Mechanical Engineer</em></p>
